# weather-boyz

./: .env.example  .gitignore  README.md  docker-compose.yml  plan.md
backend/: .env.example  Cargo.toml
backend/docker/: docker-compose.yml.sample
backend/migrations/: 20250619001225_init.up.sql  20250627192531_policies.down.sql  20250627192531_policies.up.sql  20250701191136_create_available_policies.down.sql  20250701191136_create_available_policies.up.sql  20250703195307_AddTransactionHashtoPolicy.down.sql  20250703195307_AddTransactionHashtoPolicy.up.sql  20250703203328_add_blockchain_verification_fields.down.sql  20250703203328_add_blockchain_verification_fields.up.sql
backend/src/: main.rs  test_utils.rs
backend/src/blockchain/: blockchain_service.rs  contract_abi.rs  mod.rs
backend/src/db/: mod.rs  models.rs  policies_queries.rs  policy_queries.rs  pool.rs  user_queries.rs
backend/src/weather_data/: mod.rs  weatherxm.rs
backend/src/web/: auth.rs  mod.rs  routes.rs  services.rs
blockchain/: .env.example  package-lock.json  package.json
blockchain/artifacts/contracts/WeatherInsurance.sol/: WeatherInsurance.dbg.json  WeatherInsurance.json
blockchain/cache/: solidity-files-cache.json
blockchain/contracts/: WeatherInsurance.sol
blockchain/scripts/: deploy.js
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/assets/styles/: variables.css
frontend/src/components/: Navbar.css  Navbar.tsx  WalletConnect.tsx
frontend/src/components/layout/: Layout.tsx  Navbar.tsx
frontend/src/context/: AuthContext.tsx  NotificationContext.tsx  WalletContext.tsx
frontend/src/pages/: AvailablePolicies.tsx  Gallery.tsx  Home.tsx  Login.tsx  MyPolicies.tsx  Policies.tsx  Register.tsx
frontend/src/services/: authService.ts  policyService.ts
frontend/src/types/: index.ts
frontend/src/utils/: auth.ts  contract.ts
oracle/: .env.example  Cargo.toml
oracle/src/: main.rs
(+4 files in other folders)
