[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
h3o = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "time",
] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
time = { version = "0.3", features = ["serde"] }
