[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
h3o = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "time",
  "rust_decimal",
] }
rust_decimal = { version = "1.36", features = ["serde"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
time = { version = "0.3", features = ["serde"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.34", features = ["serde"] }

[dev-dependencies]
axum-test = "17.3"
tokio-test = "0.4"
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
